# replicator

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  manifest  nms5vgmqsomp4qgnfjjbov3cvrqbutrn.darc  piccolo_conf.py  pyproject.toml
foxdocs/LitestarPortoShowcase-main/: .gitignore  Dockerfile  PORTO_SPEC_KIT_SUMMARY.md  README.md  docker-compose.yml  env.example  piccolo_conf.py  pyproject.toml
foxdocs/LitestarPortoShowcase-main/.github/ISSUE_TEMPLATE/: README.md  ai-task.yml  architecture.yml  bug-report.yml  config.yml  feature-request.yml  performance.yml  question.yml  security.yml
foxdocs/LitestarPortoShowcase-main/docs/: 01-introduction.md  02-architecture.md  03-project-structure.md  04-components.md  05-examples.md  06-technologies.md  07-getting-started.md  08-best-practices.md  09-api-reference.md  10-diagrams.md  11-ai-development.md  README.md
foxdocs/LitestarPortoShowcase-main/examples/: api_usage.py
foxdocs/LitestarPortoShowcase-main/spec-kit/: README.md
foxdocs/LitestarPortoShowcase-main/spec-kit/docs/: getting-started.md  manual-usage.md  porto-integration.md
foxdocs/LitestarPortoShowcase-main/spec-kit/examples/order-management/: README.md
foxdocs/LitestarPortoShowcase-main/spec-kit/memory/: constitution-porto.md
foxdocs/LitestarPortoShowcase-main/spec-kit/scripts/: check-task-prerequisites-porto.sh  create-new-feature-porto.sh  setup-plan-porto.sh
foxdocs/LitestarPortoShowcase-main/spec-kit/templates/: plan-template-porto.md  spec-template-porto.md  tasks-template-porto.md
foxdocs/LitestarPortoShowcase-main/spec-kit/templates/commands/: plan-porto.md  specify-porto.md  tasks-porto.md
foxdocs/LitestarPortoShowcase-main/src/: Bootstrap.py  Main.py
foxdocs/LitestarPortoShowcase-main/src/Containers/: __init__.py
foxdocs/LitestarPortoShowcase-main/src/Containers/AppSection/: __init__.py
foxdocs/LitestarPortoShowcase-main/src/Containers/AppSection/Book/: PiccoloApp.py  Providers.py  _Init__.py  __init__.py
foxdocs/LitestarPortoShowcase-main/src/Containers/AppSection/User/: PiccoloApp.py  Providers.py  __init__.py
foxdocs/LitestarPortoShowcase-main/src/Containers/VendorSection/: __init__.py
foxdocs/LitestarPortoShowcase-main/src/Ship/: App.py  __init__.py
foxdocs/LitestarPortoShowcase-main/src/Ship/Configs/: App.py  __init__.py
foxdocs/LitestarPortoShowcase-main/src/Ship/Core/: Database.py  Logging.py  __init__.py
foxdocs/LitestarPortoShowcase-main/src/Ship/Exceptions/: Handlers.py  __init__.py
foxdocs/LitestarPortoShowcase-main/src/Ship/Parents/: Action.py  Controller.py  Model.py  Repository.py  Task.py  __init__.py
foxdocs/LitestarPortoShowcase-main/src/Ship/Plugins/: LogfirePlugin.py  __init__.py
foxdocs/LitestarPortoShowcase-main/src/Ship/Providers/: App.py
foxdocs/document-translator-service-main/: .dockerignore  .gitignore  .pip-constraints.txt  .rsyncignore  BUILD-OPTIONS-README.md  BUILD-WINDOWS-README.md  CPU_OPTIMIZATION.md  DOCKER-BUILD-README.md  DOCKER-СБОРКА-ИТОГИ.txt  DOCKER_BUILD_CHEATSHEET.md  DOCKER_BUILD_GUIDE.md  DOCKER_BUILD_README.md  DOCKER_FIXES.md  DOCKER_VS_GITHUB_ACTIONS.md  Dockerfile  Dockerfile.old  Dockerfile.optimized  Dockerfile.windows-build  Dockerfile.windows-build.simple  Dockerfile.windows-builder-simple  Dockerfile.windows-builder-wine  Dockerfile.windows-native  Dockerfile.windows-pyinstaller  DocumentTranslator.onefile.spec.template  DocumentTranslator.spec.template  FIX_NVIDIA_PACKAGES.md  INSTALL-VCREDIST.txt  LICENSING_ARCHITECTURE.md  MACHINE_ID_UPDATE.md  OPTIMIZATION_SUMMARY.md  PYINSTALLER-RELOAD-FIX.md  QUICK_FIX_NVIDIA.md  QUICK_START_OPTIMIZATION.md  README.md  RELEASE_GUIDE.md  RELEASE_README.md  RUN-EXE.bat  RUN-EXE.ps1  SOLUTION_COMPARISON.md  START_HERE.md  (+39 more)
foxdocs/document-translator-service-main/.github/: SETUP_GUIDE.md
foxdocs/document-translator-service-main/.github/workflows/: ARCHITECTURE.md  README.md  build-license-helper.yml  build-release-package.yml  cleanup-artifacts.yml
foxdocs/document-translator-service-main/license_helper/: .gitignore  CHANGELOG.md  README.md  build-with-pyarmor.sh  build.sh  install_as_service.sh  license_helper.py  requirements.txt  run.sh  uninstall_service.sh
foxdocs/document-translator-service-main/scripts/: build-cpu-only.sh  build-optimized.sh  check-image-size.sh  cleanup-old-releases.sh  download-release.sh  list-releases.sh  prewarm_models.py
foxdocs/document-translator-service-main/scripts/windows/: load-image.bat  load-image.ps1  start.bat  start.ps1  stop.bat  stop.ps1
foxdocs/document-translator-service-main/src/: Main.py  __init__.py
foxdocs/document-translator-service-main/src/Containers/AppSection/: __init__.py
foxdocs/document-translator-service-main/src/Ship/: App.py
foxdocs/document-translator-service-main/src/Ship/Configs/: App.py
foxdocs/document-translator-service-main/src/Ship/Exceptions/: Handlers.py  __init__.py
foxdocs/document-translator-service-main/src/Ship/Licensing/: Middleware.py  WebSocketExample.py  __init__.py  decorators.py  helpers.py  machine_id.py
foxdocs/document-translator-service-main/src/Ship/Parents/: Action.py  Exception.py  Manager.py  Transformer.py  __init__.py
foxdocs/document-translator-service-main/src/Ship/Plugins/: LogfirePlugin.py
foxdocs/document-translator-service-main/src/Ship/Providers/: App.py  __init__.py
foxdocs/document-translator-service-main/translation_benchmark/: .gitignore  EXAMPLE_OUTPUT.md  INDEX.md  MARKDOWN_REPORT_EXAMPLE.md  ONNX_OPTIMIZATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  TECHNICAL_NOTES.md  benchmark_results_20251029_011120.md  benchmark_results_20251029_011937.md  benchmark_translators.py  chinese_test_data.txt  requirements.txt  run_benchmark.sh
foxdocs/taskiq-litestar-develop/: .pre-commit-config.yaml  README.md  pyproject.toml
foxdocs/taskiq-litestar-develop/.github/workflows/: test.yml
foxdocs/taskiq-litestar-develop/taskiq_litestar/: intializer.py
(+1202 files in other folders)
