[project]
name = "porto-litestar"
version = "0.1.0"
description = "Porto architecture implementation with Litestar framework"
authors = [
    {name = "Author", email = "author@example.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "litestar>=2.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings",
    "piccolo>=1.22.0",
    "piccolo[sqlite]",
    "dishka>=1.4.0",
    "logfire[sqlite3]>=2.7.0",
    "logfire[httpx]",
    "logfire[asgi]",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "watchfiles>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]


